K8s/user-java/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java
  labels:
    app: user-java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  template:
    metadata:
      labels:
        app: user-java
    spec:
      containers:
      - name: user-java
        image: registrywjl7126.azurecr.io/user-java:0.0.1
        ports:
        - containerPort: 80
        volumeMounts:
          - name: secrets-store-inline
            mountPath: "/secret"
            readOnly: true
      volumes:
      - name: secrets-store-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azure-kvname"
          nodePublishSecretRef:                       # Only required when using service principal mode
            name: secrets-store-creds
