K8s/user-java/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-java-svc
spec:
  selector:
    app: user-java
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
